z-index % fixed

--- a/app/assets/stylesheets/components/_donut.scss
+++ b/app/assets/stylesheets/components/_donut.scss
@@ -53,7 +53,7 @@
   font-size: 20px;
   text-align: center;
   color: #575e5c;
-  z-index: 2;
+  // z-index: 1;
 }
 
 .overlay {
